argocd/apps/00-infra/cilium/routes/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: jupyter
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - "argo.jjooniex.org"    
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: tf-notebook
      port: 80 

# Gateway: default namespace
# HTTPRoute: argocd namespace
